# SpriteFlow

./: .env.example  .gitignore  README.md  README_zh-CN.md  after-reload.yaml  pyproject.toml
config/: routing.yaml
docs/: SpriteFlow-展示层预览.html  SpriteFlow-技术设计文档.md  SpriteFlow-视觉设计规范.md  development-plan.md  template-management-design.md
graphs/: g-mq4307qa-qmyqwv.json  g-mq5evq14-6wmjpj.json  g-mq8do4dd-6y4ppn.json  index.json
graphs/presets/: animation-pipeline.json  character-pipeline.json  skill-vfx-pipeline.json
runs/: grun_175b9a7afce2.json  grun_272d4a6b1a7f.json  grun_5306289d994c.json  grun_f5ad8e7e642e.json
runs/video_frames/1cc39d305351/: index.json
runs/video_frames/a346635be273/: index.json
src/spriteflow/: __init__.py  __main__.py  config.py
src/spriteflow/api/: __init__.py  app.py  assets.py  config.py  deps.py  generate.py  graphs.py  image_editor.py  jobs.py  magic.py  menu.py  nodes.py  routing.py  video_frames.py  videos.py  workflows.py
src/spriteflow/asset_hub/: __init__.py  db.py  ingest.py  models.py  (+1 more)
tests/: test_batch_generate.py  test_character_consistency.py  test_extract_pack.py  test_template_generate.py
web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/scripts/: fetch-imgly-models.mjs
web/src/: App.tsx  main.tsx
workflows/: end_to_end_character.yaml  example_img2img.yaml  example_multi_image_fusion.yaml  example_sequential_8dir.yaml  example_text2img.yaml  example_text2img_with_align.yaml  example_video_to_spritesheet.yaml
(+197 files in other folders)
